all the arraylist programs now generate with multiple inputs and different types